--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "react-currency-masked-input": "^2.5.0",
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
